# vsag

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  v0.11.14_hnsw_build.json  v0.11.14_hnsw_search.json  v0.13.4_hgraph_build.json  v0.13.4_hgraph_search.json
mockimpl/: CMakeLists.txt
mockimpl/vsag/: simpleflat.cpp  simpleflat.h
python/: pyproject.toml  setup.cfg  setup.py
src/: CMakeLists.txt  allocator_wrapper.h  attr_value_map.h  attr_value_map_test.cpp  base_filter_functor.h  bitset_impl.cpp  bitset_impl.h  bitset_impl_test.cpp  common.h  constants.cpp  data_type.h  dataset_impl.cpp  dataset_impl.h  dataset_impl_test.cpp  distances.cpp  engine.cpp  factory.cpp  index_commom_param_test.cpp  index_common_param.cpp  index_common_param.h  index_detail_data.h  index_detail_data_test.cpp  index_detail_info.cpp  index_feature_list.cpp  index_feature_list.h  inner_string_params.h  json_wrapper.cpp  json_wrapper.h  label_table.cpp  label_table.h  lock_strategy.h  logger.cpp  logger.h  options.cpp  options_test.cpp  parameter.h  parameter_check.cpp  parameter_test.h  query_context.h  resource.cpp  (+7 more)
src/algorithm/: CMakeLists.txt  brute_force.cpp  brute_force.h  brute_force_parameter.cpp  brute_force_parameter.h  brute_force_parameter_test.cpp  hgraph.cpp  hgraph.h  hgraph_parameter.cpp  hgraph_parameter.h  hgraph_parameter_test.cpp  index_search_parameter.h  inner_index_interface.cpp  inner_index_interface.h  inner_index_interface_test.cpp  inner_index_parameter.cpp  inner_index_parameter.h  inner_index_parameter_test.cpp  ivf.cpp  ivf.h  ivf_parameter.cpp  ivf_parameter.h  ivf_parameter_test.cpp  pyramid.cpp  pyramid.h  pyramid_test.cpp  pyramid_zparameters.cpp  pyramid_zparameters.h  pyramid_zparameters_test.cpp  sparse_index.cpp  sparse_index.h  sparse_index_parameters.cpp  sparse_index_parameters.h
src/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h  hgraph_analyzer.cpp  hgraph_analyzer.h
src/attr/: CMakeLists.txt  attr_type_schema.cpp  attr_type_schema_test.cpp  attr_value_map.cpp  attr_value_map.h  attr_value_map_test.cpp  attribute.cpp  expression.h  expression_visitor.cpp  expression_visitor.h  multi_bitset_manager.cpp  multi_bitset_manager.h  multi_bitset_manager_test.cpp
src/data_cell/: adapter_graph_datacell.h  adapter_graph_datacell_test.cpp  attribute_bucket_inverted_datacell.cpp  attribute_bucket_inverted_datacell.h  attribute_bucket_inverted_datacell_test.cpp  attribute_inverted_datacell.cpp  attribute_inverted_datacell.h  attribute_inverted_datacell_test.cpp  attribute_inverted_interface.cpp  attribute_inverted_interface.h  bucket_datacell.h  bucket_datacell_parameter.cpp  bucket_datacell_parameter.h  bucket_datacell_parameter_test.cpp  bucket_datacell_test.cpp  bucket_interface.cpp  bucket_interface.h  compressed_graph_datacell.cpp  compressed_graph_datacell.h  compressed_graph_datacell_parameter.h  compressed_graph_datacell_parameter_test.cpp  compressed_graph_datacell_test.cpp  extra_info_datacell.h  extra_info_datacell_parameter.cpp  extra_info_datacell_parameter.h  extra_info_datacell_test.cpp  extra_info_interface.cpp  extra_info_interface.h  extra_info_interface_test.cpp  flatten_datacell.h  flatten_datacell_parameter.cpp  flatten_datacell_parameter.h  flatten_datacell_test.cpp  flatten_interface.cpp  flatten_interface.h  flatten_interface_parameter.cpp  flatten_interface_parameter.h  graph_datacell.h  graph_datacell_parameter.cpp  graph_datacell_parameter.h  (+20 more)
src/datacell/: CMakeLists.txt  attribute_bucket_inverted_datacell.cpp  attribute_bucket_inverted_datacell.h  attribute_inverted_interface.h  bucket_datacell.h  bucket_datacell_parameter.cpp  bucket_datacell_test.cpp  bucket_interface.cpp  bucket_interface.h  compressed_graph_datacell.cpp  compressed_graph_datacell.h  compressed_graph_datacell_parameter.h  compressed_graph_datacell_test.cpp  extra_info_datacell.h  extra_info_interface.h  extra_info_interface_test.cpp  flatten_datacell.h  flatten_interface.cpp  flatten_interface.h  graph_datacell.h  graph_datacell_parameter.cpp  graph_datacell_parameter.h  graph_datacell_test.cpp  graph_interface.cpp  graph_interface.h  graph_interface_parameter.cpp  graph_interface_parameter.h  sparse_graph_datacell.cpp  sparse_graph_datacell.h  sparse_graph_datacell_parameter.cpp  sparse_term_datacell.cpp  sparse_term_datacell.h  sparse_term_datacell_test.cpp  sparse_vector_datacell.h  sparse_vector_datacell.inl  sparse_vector_datacell_test.cpp
src/factory/: CMakeLists.txt  engine.cpp  factory.cpp  factory_test.cpp  resource.cpp
src/impl/: CMakeLists.txt  basic_optimizer.cpp  basic_optimizer.h  basic_searcher.cpp  basic_searcher.h  basic_searcher_test.cpp  conjugate_graph.cpp  conjugate_graph.h  conjugate_graph_test.cpp  elias_fano_encoder.cpp  elias_fano_encoder.h  elias_fano_encoder_test.cpp  fht_kac_rotator.cpp  fht_kac_rotator.h  fht_kac_rotator_test.cpp  hadamard_matrix.cpp  hadamard_matrix.h  inner_search_param.h  kmeans_cluster.cpp  kmeans_cluster.h  kmeans_cluster_test.cpp  label_table.cpp  label_table.h  label_table_test.cpp  matrix_rotator.h  odescent_graph_builder.cpp  odescent_graph_builder.h  odescent_graph_builder_test.cpp  odescent_graph_parameter.cpp  odescent_graph_parameter.h  pruning_strategy.cpp  pruning_strategy.h  pruning_strategy_test.cpp  random_orthogonal_matrix.cpp  random_orthogonal_matrix.h  random_orthogonal_matrix_test.cpp  reorder.cpp  reorder.h  runtime_parameter.h
src/index/: diskann.cpp  diskann.h  diskann_test.cpp  diskann_zparameters.cpp  diskann_zparameters.h  hgraph_index.h  hnsw.cpp  hnsw.h  hnsw_test.cpp  hnsw_zparameters.cpp  hnsw_zparameters.h  hnsw_zparameters_test.cpp  index_common_param.cpp  index_common_param.h  (+9 more)
tests/: CMakeLists.txt  test_brute_force.cpp  test_diskann.cpp  test_fc_visitor.cpp  test_hgraph.cpp  test_hnsw.cpp  test_hnsw_new.cpp  test_index.cpp  test_index.h  test_index_old.cpp  test_ivf.cpp  test_main.cpp  test_memleak.cpp  test_multi_thread.cpp  test_pyramid.cpp  test_random_index.cpp  test_regression.cpp  test_simple_index.cpp  test_sindi.cpp  test_sparse_index.cpp
(+482 files in other folders)
