[metadata]
name = pyvsag
description = vsag is a vector indexing library used for similarity search
author = the vsag project
author_email = the.vsag.project@gmail.com
license = Apache-2.0
keywords = search, nearest, neighbors
url = https://github.com/antgroup/vsag
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = pyvsag
python_requires = >=3.6
install_requires =
    packaging

setup_requires =
    pep440
    setuptools_scm[toml]<7.0; python_version == '3.6'

[options.package_data]
pyvsag = _pyvsag*.so

[setuptools_scm]
version_scheme = release-branch-semver
local_scheme = no-local-version
write_to = python/pyvsag/_version.py
root = ..
